Refactored layout; added titles; fixed broken CSS

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,11 +14,6 @@
  *= require_self
  */
 
-* {
-    padding: 0px;
-    margin: 0px;
-}
-
 body {
     background: #eee;
     padding: 8px;
